Fixing z-index of slides and footer

--- a/css/theme/marcysutton.css
+++ b/css/theme/marcysutton.css
@@ -49,7 +49,6 @@ body {
     width: 100%;
     bottom: 15px;
     left: 0;
-    z-index: 10;
     font-size: 40%;
     line-height: 1.25em;
     text-align: left;
